configuratie bestanden aangepast van template naar datafundament_fb

--- a/.postgres.env.example
+++ b/.postgres.env.example
@@ -3,4 +3,4 @@ MSSQL_PID = 'Developer'
 DATABASE_PORT = '5432'
 POSTGRES_PASSWORD = 'very_str0ng_p@ssword!'
 POSTGRES_USER = 'postgres'
-POSTGRES_DB = 'example_database'
+POSTGRES_DB = 'datafundament_fb'
