update django, runserver_plus

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ datafundament_fb/static/
 #/settings
 .tmp/
 
+# Certificates
+*.pem
+*cert.key
+*cert.crt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
