--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,17 @@
 #
 #    pip-compile --allow-unsafe --strip-extras requirements.in
 #
-asgiref==3.7.2
+asgiref==3.8.1
     # via django
-django==5.0.2
+django==5.0.6
     # via -r requirements.in
 psycopg2==2.9.9
     # via -r requirements.in
 pyodbc==5.1.0
     # via -r requirements.in
-sqlparse==0.4.4
+sqlparse==0.5.0
     # via django
 tzdata==2024.1
     # via django
+wfastcgi==3.0.0
+    # via -r requirements.in
