csp middleware en andere security headers

--- a/.app.env.example
+++ b/.app.env.example
@@ -7,3 +7,6 @@ DATABASE_HOST = 'postgres'
 DATABASE_PORT = '5432'
 DATABASE_USER = 'postgres'
 DATABASE_PASSWORD = 'very_str0ng_p@ssword!'
+CSRF_TRUSTED_ORIGINS = 'http://localhost,https://localhost'
+CSRF_COOKIE_SECURE = 0
+SECURE_SSL_REDIRECT = 0
