--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,10 @@
 asgiref==3.8.1
     # via django
 django==5.0.6
+    # via
+    #   -r requirements.in
+    #   django-csp
+django-csp==3.8
     # via -r requirements.in
 psycopg2==2.9.9
     # via -r requirements.in
