--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         - BUILD_REVISION
         - BUILD_VERSION
     # @TODO update image to location of official image for app deployments 
-    image: djangotemplate-app
+    image: ${REGISTRY:-localhost:5000}/${REPOSITORY:-it4c/datafundament}:${VERSION:-latest}
     command: /app/deploy/app/docker-run.sh
 
   dev:
