--- a/requirements.txt
+++ b/requirements.txt
@@ -20,5 +20,7 @@ sqlparse==0.5.0
     # via django
 tzdata==2024.1
     # via django
+uwsgi==2.0.25
+    # via -r requirements.in
 wfastcgi==3.0.0
     # via -r requirements.in
