--- a/datafundament_fb/uwsgi.ini
+++ b/datafundament_fb/uwsgi.ini
@@ -43,7 +43,7 @@ py-autoreload = 1
 http = :8000
 
 # Load the specified WSGI module
-module = iot.wsgi:application
+module = datafundament_fb.wsgi:application
 
 # Map a mount point to a static directory (or file)
 static-map = /static=/static
