Changed static file uwsgi binding

--- a/datafundament_fb/uwsgi.ini
+++ b/datafundament_fb/uwsgi.ini
@@ -46,7 +46,7 @@ http = :8000
 module = datafundament_fb.wsgi:application
 
 # Map a mount point to a static directory (or file)
-static-map = /static/css=/static/css
+static-map = /static=/app/src/datafundament_fb/static
 
 # Enable offloading of work to a separate thread
 offload-threads = 1
