Explicitly defined mime type file in uwsgi.ini

--- a/datafundament_fb/uwsgi.ini
+++ b/datafundament_fb/uwsgi.ini
@@ -53,3 +53,6 @@ offload-threads = 1
 
 # Terminate a worker process after a certain amount of time
 harakiri = 30
+
+# explicitly define mime types
+mime-file=/etc/mime.types
