--- a/requirements.txt
+++ b/requirements.txt
@@ -4,393 +4,44 @@
 #
 #    pip-compile --allow-unsafe --strip-extras requirements.in
 #
-adal==1.2.7
-    # via msrestazure
-antlr4-python3-runtime==4.13.1
-    # via azure-cli
-applicationinsights==0.11.10
-    # via azure-cli-telemetry
-argcomplete==3.3.0
-    # via
-    #   azure-cli-core
-    #   knack
 asgiref==3.8.1
     # via django
-azure-appconfiguration==1.1.1
-    # via azure-cli
-azure-batch==14.2.0
-    # via azure-cli
-azure-cli==2.61.0
-    # via -r requirements.in
-azure-cli-core==2.61.0
-    # via azure-cli
-azure-cli-telemetry==1.1.0
-    # via azure-cli-core
 azure-common==1.1.28
     # via
-    #   azure-batch
-    #   azure-graphrbac
-    #   azure-keyvault-administration
     #   azure-keyvault-certificates
     #   azure-keyvault-keys
     #   azure-keyvault-secrets
-    #   azure-mgmt-advisor
-    #   azure-mgmt-apimanagement
-    #   azure-mgmt-appconfiguration
-    #   azure-mgmt-appcontainers
-    #   azure-mgmt-applicationinsights
-    #   azure-mgmt-authorization
-    #   azure-mgmt-batch
-    #   azure-mgmt-batchai
-    #   azure-mgmt-billing
-    #   azure-mgmt-botservice
-    #   azure-mgmt-cdn
-    #   azure-mgmt-cognitiveservices
-    #   azure-mgmt-compute
-    #   azure-mgmt-containerinstance
-    #   azure-mgmt-containerregistry
-    #   azure-mgmt-containerservice
-    #   azure-mgmt-cosmosdb
-    #   azure-mgmt-databoxedge
-    #   azure-mgmt-datalake-store
-    #   azure-mgmt-datamigration
-    #   azure-mgmt-devtestlabs
-    #   azure-mgmt-dns
-    #   azure-mgmt-eventgrid
-    #   azure-mgmt-eventhub
-    #   azure-mgmt-extendedlocation
-    #   azure-mgmt-hdinsight
-    #   azure-mgmt-imagebuilder
-    #   azure-mgmt-iotcentral
-    #   azure-mgmt-iothub
-    #   azure-mgmt-iothubprovisioningservices
-    #   azure-mgmt-keyvault
-    #   azure-mgmt-kusto
-    #   azure-mgmt-loganalytics
-    #   azure-mgmt-managedservices
-    #   azure-mgmt-managementgroups
-    #   azure-mgmt-maps
-    #   azure-mgmt-marketplaceordering
-    #   azure-mgmt-media
-    #   azure-mgmt-monitor
-    #   azure-mgmt-msi
-    #   azure-mgmt-netapp
-    #   azure-mgmt-policyinsights
-    #   azure-mgmt-privatedns
-    #   azure-mgmt-rdbms
-    #   azure-mgmt-recoveryservices
-    #   azure-mgmt-recoveryservicesbackup
-    #   azure-mgmt-redhatopenshift
-    #   azure-mgmt-redis
-    #   azure-mgmt-resource
-    #   azure-mgmt-search
-    #   azure-mgmt-security
-    #   azure-mgmt-servicebus
-    #   azure-mgmt-servicefabric
-    #   azure-mgmt-servicefabricmanagedclusters
-    #   azure-mgmt-servicelinker
-    #   azure-mgmt-signalr
-    #   azure-mgmt-sql
-    #   azure-mgmt-sqlvirtualmachine
-    #   azure-mgmt-storage
-    #   azure-mgmt-synapse
-    #   azure-mgmt-trafficmanager
-    #   azure-mgmt-web
-    #   azure-multiapi-storage
-    #   azure-storage-common
-    #   azure-synapse-accesscontrol
-    #   azure-synapse-artifacts
-    #   azure-synapse-managedprivateendpoints
-    #   azure-synapse-spark
 azure-core==1.30.2
     # via
     #   -r requirements.in
-    #   azure-appconfiguration
-    #   azure-data-tables
     #   azure-identity
-    #   azure-keyvault-administration
     #   azure-keyvault-certificates
     #   azure-keyvault-keys
     #   azure-keyvault-secrets
-    #   azure-mgmt-core
-    #   azure-monitor-query
-    #   azure-multiapi-storage
-    #   azure-synapse-accesscontrol
-    #   azure-synapse-managedprivateendpoints
-    #   azure-synapse-spark
-    #   msrest
-azure-cosmos==3.2.0
-    # via azure-cli
-azure-data-tables==12.4.0
-    # via azure-cli
-azure-datalake-store==0.0.53
-    # via azure-cli
-azure-graphrbac==0.60.0
-    # via azure-cli
 azure-identity==1.17.1
     # via -r requirements.in
 azure-keyvault==4.2.0
     # via -r requirements.in
-azure-keyvault-administration==4.4.0b2
-    # via azure-cli
 azure-keyvault-certificates==4.7.0
-    # via
-    #   azure-cli
-    #   azure-keyvault
+    # via azure-keyvault
 azure-keyvault-keys==4.9.0b3
-    # via
-    #   azure-cli
-    #   azure-keyvault
+    # via azure-keyvault
 azure-keyvault-secrets==4.7.0
     # via
     #   -r requirements.in
-    #   azure-cli
     #   azure-keyvault
-azure-mgmt-advisor==9.0.0
-    # via azure-cli
-azure-mgmt-apimanagement==4.0.0
-    # via azure-cli
-azure-mgmt-appconfiguration==3.0.0
-    # via azure-cli
-azure-mgmt-appcontainers==2.0.0
-    # via azure-cli
-azure-mgmt-applicationinsights==1.0.0
-    # via azure-cli
-azure-mgmt-authorization==4.0.0
-    # via azure-cli
-azure-mgmt-batch==17.3.0
-    # via azure-cli
-azure-mgmt-batchai==7.0.0b1
-    # via azure-cli
-azure-mgmt-billing==6.0.0
-    # via azure-cli
-azure-mgmt-botservice==2.0.0
-    # via azure-cli
-azure-mgmt-cdn==12.0.0
-    # via azure-cli
-azure-mgmt-cognitiveservices==13.5.0
-    # via azure-cli
-azure-mgmt-compute==31.0.0
-    # via azure-cli
-azure-mgmt-containerinstance==10.1.0
-    # via azure-cli
-azure-mgmt-containerregistry==10.3.0
-    # via azure-cli
-azure-mgmt-containerservice==30.0.0
-    # via azure-cli
-azure-mgmt-core==1.4.0
-    # via
-    #   azure-cli-core
-    #   azure-mgmt-advisor
-    #   azure-mgmt-apimanagement
-    #   azure-mgmt-appconfiguration
-    #   azure-mgmt-appcontainers
-    #   azure-mgmt-applicationinsights
-    #   azure-mgmt-authorization
-    #   azure-mgmt-batch
-    #   azure-mgmt-batchai
-    #   azure-mgmt-billing
-    #   azure-mgmt-botservice
-    #   azure-mgmt-cdn
-    #   azure-mgmt-cognitiveservices
-    #   azure-mgmt-compute
-    #   azure-mgmt-containerinstance
-    #   azure-mgmt-containerregistry
-    #   azure-mgmt-containerservice
-    #   azure-mgmt-cosmosdb
-    #   azure-mgmt-databoxedge
-    #   azure-mgmt-datamigration
-    #   azure-mgmt-dns
-    #   azure-mgmt-eventgrid
-    #   azure-mgmt-eventhub
-    #   azure-mgmt-extendedlocation
-    #   azure-mgmt-hdinsight
-    #   azure-mgmt-imagebuilder
-    #   azure-mgmt-iotcentral
-    #   azure-mgmt-iothub
-    #   azure-mgmt-iothubprovisioningservices
-    #   azure-mgmt-keyvault
-    #   azure-mgmt-loganalytics
-    #   azure-mgmt-managementgroups
-    #   azure-mgmt-maps
-    #   azure-mgmt-marketplaceordering
-    #   azure-mgmt-media
-    #   azure-mgmt-monitor
-    #   azure-mgmt-msi
-    #   azure-mgmt-netapp
-    #   azure-mgmt-policyinsights
-    #   azure-mgmt-privatedns
-    #   azure-mgmt-rdbms
-    #   azure-mgmt-recoveryservices
-    #   azure-mgmt-recoveryservicesbackup
-    #   azure-mgmt-redhatopenshift
-    #   azure-mgmt-redis
-    #   azure-mgmt-resource
-    #   azure-mgmt-search
-    #   azure-mgmt-security
-    #   azure-mgmt-servicebus
-    #   azure-mgmt-servicefabric
-    #   azure-mgmt-servicefabricmanagedclusters
-    #   azure-mgmt-servicelinker
-    #   azure-mgmt-signalr
-    #   azure-mgmt-sql
-    #   azure-mgmt-sqlvirtualmachine
-    #   azure-mgmt-storage
-    #   azure-mgmt-synapse
-    #   azure-mgmt-trafficmanager
-    #   azure-mgmt-web
-    #   azure-synapse-artifacts
-azure-mgmt-cosmosdb==9.4.0
-    # via azure-cli
-azure-mgmt-databoxedge==1.0.0
-    # via azure-cli
-azure-mgmt-datalake-nspkg==3.0.1
-    # via azure-mgmt-datalake-store
-azure-mgmt-datalake-store==0.5.0
-    # via azure-cli
-azure-mgmt-datamigration==10.0.0
-    # via azure-cli
-azure-mgmt-devtestlabs==4.0.0
-    # via azure-cli
-azure-mgmt-dns==8.0.0
-    # via azure-cli
-azure-mgmt-eventgrid==10.2.0b2
-    # via azure-cli
-azure-mgmt-eventhub==10.1.0
-    # via azure-cli
-azure-mgmt-extendedlocation==1.0.0b2
-    # via azure-cli
-azure-mgmt-hdinsight==9.0.0
-    # via azure-cli
-azure-mgmt-imagebuilder==1.3.0
-    # via azure-cli
-azure-mgmt-iotcentral==10.0.0b2
-    # via azure-cli
-azure-mgmt-iothub==3.0.0
-    # via azure-cli
-azure-mgmt-iothubprovisioningservices==1.1.0
-    # via azure-cli
-azure-mgmt-keyvault==10.3.0
-    # via azure-cli
-azure-mgmt-kusto==0.3.0
-    # via azure-cli
-azure-mgmt-loganalytics==13.0.0b4
-    # via azure-cli
-azure-mgmt-managedservices==1.0.0
-    # via azure-cli
-azure-mgmt-managementgroups==1.0.0
-    # via azure-cli
-azure-mgmt-maps==2.0.0
-    # via azure-cli
-azure-mgmt-marketplaceordering==1.1.0
-    # via azure-cli
-azure-mgmt-media==9.0.0
-    # via azure-cli
-azure-mgmt-monitor==5.0.1
-    # via azure-cli
-azure-mgmt-msi==7.0.0
-    # via azure-cli
-azure-mgmt-netapp==10.1.0
-    # via azure-cli
-azure-mgmt-nspkg==3.0.2
-    # via azure-mgmt-datalake-nspkg
-azure-mgmt-policyinsights==1.1.0b4
-    # via azure-cli
-azure-mgmt-privatedns==1.0.0
-    # via azure-cli
-azure-mgmt-rdbms==10.2.0b17
-    # via azure-cli
-azure-mgmt-recoveryservices==3.0.0
-    # via azure-cli
-azure-mgmt-recoveryservicesbackup==9.1.0
-    # via azure-cli
-azure-mgmt-redhatopenshift==1.4.0
-    # via azure-cli
-azure-mgmt-redis==14.3.0
-    # via azure-cli
-azure-mgmt-resource==23.1.1
-    # via azure-cli
-azure-mgmt-search==9.1.0
-    # via azure-cli
-azure-mgmt-security==6.0.0
-    # via azure-cli
-azure-mgmt-servicebus==8.2.0
-    # via azure-cli
-azure-mgmt-servicefabric==2.1.0
-    # via azure-cli
-azure-mgmt-servicefabricmanagedclusters==2.0.0b6
-    # via azure-cli
-azure-mgmt-servicelinker==1.2.0b2
-    # via azure-cli
-azure-mgmt-signalr==2.0.0b1
-    # via azure-cli
-azure-mgmt-sql==4.0.0b16
-    # via azure-cli
-azure-mgmt-sqlvirtualmachine==1.0.0b5
-    # via azure-cli
-azure-mgmt-storage==21.1.0
-    # via azure-cli
-azure-mgmt-synapse==2.1.0b5
-    # via azure-cli
-azure-mgmt-trafficmanager==1.0.0
-    # via azure-cli
-azure-mgmt-web==7.2.0
-    # via azure-cli
-azure-monitor-query==1.2.0
-    # via azure-cli
-azure-multiapi-storage==1.2.0
-    # via azure-cli
-azure-nspkg==3.0.2
-    # via azure-mgmt-nspkg
-azure-storage-common==1.4.2
-    # via azure-cli
-azure-synapse-accesscontrol==0.5.0
-    # via azure-cli
-azure-synapse-artifacts==0.18.0
-    # via azure-cli
-azure-synapse-managedprivateendpoints==0.4.0
-    # via azure-cli
-azure-synapse-spark==0.2.0
-    # via azure-cli
-bcrypt==4.1.3
-    # via paramiko
 certifi==2024.6.2
-    # via
-    #   msrest
-    #   requests
+    # via requests
 cffi==1.16.0
-    # via
-    #   azure-datalake-store
-    #   cryptography
-    #   pynacl
-chardet==5.2.0
-    # via azure-cli
+    # via cryptography
 charset-normalizer==3.3.2
     # via requests
-colorama==0.4.6
-    # via azure-cli
 cryptography==42.0.8
     # via
-    #   adal
-    #   azure-cli-core
     #   azure-identity
     #   azure-keyvault-keys
-    #   azure-multiapi-storage
-    #   azure-storage-common
     #   msal
-    #   paramiko
     #   pyjwt
-    #   pyopenssl
-decorator==5.1.1
-    # via fabric
-deprecated==1.2.14
-    # via
-    #   fabric
-    #   pygithub
-distro==1.9.0
-    # via
-    #   azure-cli
-    #   azure-cli-core
 django==5.0.6
     # via
     #   -r requirements.in
@@ -400,236 +51,51 @@ django-csp==3.8
     # via -r requirements.in
 django-extensions==3.2.3
     # via -r requirements.in
-fabric==3.2.2
-    # via azure-cli
-humanfriendly==10.0
-    # via azure-cli-core
 idna==3.7
     # via requests
-invoke==2.2.0
-    # via fabric
 isodate==0.6.1
     # via
-    #   azure-keyvault-administration
     #   azure-keyvault-certificates
     #   azure-keyvault-keys
     #   azure-keyvault-secrets
-    #   azure-mgmt-apimanagement
-    #   azure-mgmt-appconfiguration
-    #   azure-mgmt-authorization
-    #   azure-mgmt-batch
-    #   azure-mgmt-cognitiveservices
-    #   azure-mgmt-compute
-    #   azure-mgmt-containerinstance
-    #   azure-mgmt-containerregistry
-    #   azure-mgmt-containerservice
-    #   azure-mgmt-cosmosdb
-    #   azure-mgmt-imagebuilder
-    #   azure-mgmt-iothub
-    #   azure-mgmt-keyvault
-    #   azure-mgmt-netapp
-    #   azure-mgmt-rdbms
-    #   azure-mgmt-recoveryservices
-    #   azure-mgmt-recoveryservicesbackup
-    #   azure-mgmt-redhatopenshift
-    #   azure-mgmt-redis
-    #   azure-mgmt-resource
-    #   azure-mgmt-search
-    #   azure-mgmt-security
-    #   azure-mgmt-servicefabric
-    #   azure-mgmt-servicefabricmanagedclusters
-    #   azure-mgmt-servicelinker
-    #   azure-mgmt-signalr
-    #   azure-mgmt-sql
-    #   azure-mgmt-storage
-    #   azure-mgmt-web
-    #   azure-monitor-query
-    #   azure-synapse-artifacts
-    #   msrest
-javaproperties==0.5.2
-    # via azure-cli
-jmespath==1.0.1
-    # via
-    #   azure-cli-core
-    #   knack
-jsondiff==2.0.0
-    # via azure-cli
-knack==0.11.0
-    # via azure-cli-core
 msal==1.28.0
     # via
-    #   azure-cli-core
-    #   azure-datalake-store
     #   azure-identity
     #   msal-extensions
 msal-extensions==1.2.0b1
-    # via
-    #   azure-cli-core
-    #   azure-identity
-msrest==0.7.1
-    # via
-    #   azure-appconfiguration
-    #   azure-data-tables
-    #   azure-graphrbac
-    #   azure-mgmt-advisor
-    #   azure-mgmt-appcontainers
-    #   azure-mgmt-applicationinsights
-    #   azure-mgmt-batchai
-    #   azure-mgmt-billing
-    #   azure-mgmt-botservice
-    #   azure-mgmt-cdn
-    #   azure-mgmt-databoxedge
-    #   azure-mgmt-datamigration
-    #   azure-mgmt-devtestlabs
-    #   azure-mgmt-dns
-    #   azure-mgmt-eventgrid
-    #   azure-mgmt-eventhub
-    #   azure-mgmt-extendedlocation
-    #   azure-mgmt-hdinsight
-    #   azure-mgmt-iotcentral
-    #   azure-mgmt-iothubprovisioningservices
-    #   azure-mgmt-kusto
-    #   azure-mgmt-loganalytics
-    #   azure-mgmt-managedservices
-    #   azure-mgmt-managementgroups
-    #   azure-mgmt-maps
-    #   azure-mgmt-marketplaceordering
-    #   azure-mgmt-media
-    #   azure-mgmt-monitor
-    #   azure-mgmt-msi
-    #   azure-mgmt-policyinsights
-    #   azure-mgmt-privatedns
-    #   azure-mgmt-servicebus
-    #   azure-mgmt-sqlvirtualmachine
-    #   azure-mgmt-synapse
-    #   azure-mgmt-trafficmanager
-    #   azure-multiapi-storage
-    #   azure-synapse-accesscontrol
-    #   azure-synapse-managedprivateendpoints
-    #   azure-synapse-spark
-    #   msrestazure
-msrestazure==0.6.4.post1
-    # via
-    #   azure-batch
-    #   azure-cli-core
-    #   azure-graphrbac
-    #   azure-mgmt-datalake-store
-    #   azure-mgmt-devtestlabs
-    #   azure-mgmt-kusto
-    #   azure-mgmt-managedservices
-oauthlib==3.2.2
-    # via requests-oauthlib
-packaging==24.1
-    # via
-    #   azure-cli
-    #   azure-cli-core
-    #   knack
-paramiko==3.4.0
-    # via
-    #   azure-cli-core
-    #   fabric
-    #   scp
-    #   sshtunnel
-pkginfo==1.11.1
-    # via azure-cli-core
+    # via azure-identity
 portalocker==2.10.0
-    # via
-    #   azure-cli-telemetry
-    #   msal-extensions
-psutil==5.9.8
-    # via azure-cli-core
+    # via msal-extensions
 psycopg2==2.9.9
     # via -r requirements.in
-pycomposefile==0.0.31
-    # via azure-cli
 pycparser==2.22
     # via cffi
-pygithub==1.59.1
-    # via azure-cli
-pygments==2.18.0
-    # via knack
 pyjwt==2.8.0
     # via
-    #   adal
-    #   azure-cli-core
     #   msal
-    #   pygithub
-pynacl==1.5.0
-    # via
-    #   azure-cli
-    #   paramiko
-    #   pygithub
+    #   pyjwt
 pyodbc==5.1.0
     # via -r requirements.in
-pyopenssl==24.1.0
-    # via azure-cli-core
-pysocks==1.7.1
-    # via requests
-python-dateutil==2.9.0.post0
-    # via
-    #   adal
-    #   azure-multiapi-storage
-    #   azure-storage-common
-pyyaml==6.0.1
-    # via
-    #   knack
-    #   pycomposefile
 requests==2.32.3
     # via
-    #   adal
-    #   azure-cli-core
     #   azure-core
-    #   azure-cosmos
-    #   azure-datalake-store
-    #   azure-multiapi-storage
-    #   azure-storage-common
     #   msal
-    #   msrest
-    #   pygithub
-    #   requests-oauthlib
-requests-oauthlib==2.0.0
-    # via msrest
-scp==0.13.6
-    # via azure-cli
-semver==2.13.0
-    # via azure-cli
 six==1.16.0
     # via
-    #   azure-cli
     #   azure-core
-    #   azure-cosmos
     #   isodate
-    #   javaproperties
-    #   msrestazure
-    #   python-dateutil
 sqlparse==0.5.0
     # via django
-sshtunnel==0.1.5
-    # via azure-cli
-tabulate==0.9.0
-    # via
-    #   azure-cli
-    #   knack
 typing-extensions==4.12.2
     # via
     #   azure-core
     #   azure-identity
-    #   azure-keyvault-administration
     #   azure-keyvault-certificates
     #   azure-keyvault-keys
     #   azure-keyvault-secrets
-    #   azure-monitor-query
 urllib3==2.2.2
-    # via
-    #   azure-cli
-    #   requests
+    # via requests
 uwsgi==2.0.26
     # via -r requirements.in
-websocket-client==1.3.3
-    # via azure-cli
 wfastcgi==3.0.0
     # via -r requirements.in
-wrapt==1.16.0
-    # via deprecated
-xmltodict==0.13.0
-    # via azure-cli
