--- a/.app.env
+++ b/.app.env
@@ -10,3 +10,5 @@ DATABASE_PASSWORD = 'very_str0ng_p@ssword!'
 CSRF_TRUSTED_ORIGINS = 'http://localhost,https://localhost'
 CSRF_COOKIE_SECURE = 0
 SECURE_SSL_REDIRECT = 0
+OIDC_RP_CLIENT_ID = ''
+OIDC_RP_CLIENT_SECRET = ''
