added local environment for development and tests

--- a/.app.env
+++ b/.app.env
@@ -1,4 +1,4 @@
-ENVIRONMENT = 'development'
+ENVIRONMENT = 'local'
 DEBUG = '1'
 SECRET_KEY = 'django-insecure-$qv#&v&7g^-n98le=0xrw7f2=dt+_105m6=$n8v8m(b-pwsoi$'
 ALLOWED_HOSTS = 'localhost'
