--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,9 @@ services:
       postgres:
         condition: service_healthy
     command: python manage.py runserver_plus 0.0.0.0:8000 --cert-file /cert.crt --key-file /cert.key
+    env_file: 
+      - ./.app.env
+      - ./.env
     volumes:
       - ./:/app/src
     ports:
