--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    command: python manage.py runserver_plus 0.0.0.0:8000 --cert-file /cert.crt --key-file /cert.key
-    env_file: 
+    command: python manage.py runserver 0.0.0.0:8000
+    env_file:
       - ./.app.env
       - ./.env
     volumes:
@@ -41,8 +41,7 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    environment:
-      PYTEST_ADDOPTS:
+    command: python manage.py runserver 0.0.0.0:8000
 
   postgres:
     build:
