--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     build:
       context: .
       target: app
-    image: ${REGISTRY:-localhost:5000}/${REPOSITORY:-it4c/datafundament}:${VERSION:-latest}
+    image: ${REGISTRY:-localhost:5000}/${REPOSITORY:-opdrachten/fb-locatielijst}:${VERSION:-latest}
     command: /app/runtime/app/docker-run.sh
     ports:
       - "8000:8000"
