--- a/runtime/app/uwsgi.ini
+++ b/runtime/app/uwsgi.ini
@@ -43,10 +43,10 @@ py-autoreload = 1
 http = :8000
 
 # Load the specified WSGI module
-module = datafundament_fb.wsgi:application
+module = main.wsgi:application
 
 # Map a mount point to a static directory (or file)
-static-map = /static=/app/src/datafundament_fb/static
+static-map = /static=/app/src/main/static
 
 # Enable offloading of work to a separate thread
 offload-threads = 1
