make make test use pytest

--- a/.postgres.env
+++ b/.postgres.env
@@ -1,4 +1,4 @@
 DATABASE_PORT = '5432'
-POSTGRES_PASSWORD = 'very_str0ng_p@ssword!'
-POSTGRES_USER = 'postgres'
-POSTGRES_DB = 'datafundament_fb'
+POSTGRES_PASSWORD = 'insecure'
+POSTGRES_USER = 'fbl'
+POSTGRES_DB = 'fbl'
