--- a/requirements_dev.in
+++ b/requirements_dev.in
@@ -1,3 +1,7 @@
+pytest<8  # 8 breaks pytest-django with error on /root/__init__.py
+pytest-cov
+pytest-django
+pytest-mock
 parameterized
 pyOpenSSL
 Werkzeug
