--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -6,16 +6,42 @@
 #
 cffi==1.17.1
     # via cryptography
+coverage[toml]==7.6.10
+    # via pytest-cov
 cryptography==44.0.0
     # via pyopenssl
+exceptiongroup==1.2.2
+    # via pytest
+iniconfig==2.0.0
+    # via pytest
 markupsafe==3.0.2
     # via werkzeug
+packaging==24.2
+    # via pytest
 parameterized==0.9.0
     # via -r requirements_dev.in
+pluggy==1.5.0
+    # via pytest
 pycparser==2.22
     # via cffi
 pyopenssl==25.0.0
     # via -r requirements_dev.in
+pytest==7.4.4
+    # via
+    #   -r requirements_dev.in
+    #   pytest-cov
+    #   pytest-django
+    #   pytest-mock
+pytest-cov==6.0.0
+    # via -r requirements_dev.in
+pytest-django==4.9.0
+    # via -r requirements_dev.in
+pytest-mock==3.14.0
+    # via -r requirements_dev.in
+tomli==2.2.1
+    # via
+    #   coverage
+    #   pytest
 typing-extensions==4.12.2
     # via pyopenssl
 werkzeug==3.1.3
