Specifically listen to 0.0.0.0

--- a/runtime/app/uwsgi.ini
+++ b/runtime/app/uwsgi.ini
@@ -40,7 +40,7 @@ threads = 4
 py-autoreload = 1
 
 # Bind the HTTP server to the specified address
-http = :8000
+http = 0.0.0.0:8000
 
 # Load the specified WSGI module
 module = datafundament_fb.wsgi:application
