--- a/src/main/uwsgi.ini
+++ b/src/main/uwsgi.ini
@@ -42,7 +42,7 @@ http = :8000
 wsgi-file = main/wsgi.py
 
 # Map a mount point to a static directory (or file)
-static-map = /static=/static
+static-map = /static=/app/src/static
 
 # Enable offloading of work to a separate thread
 offload-threads = 1
