--- a/compose.yml
+++ b/compose.yml
@@ -25,6 +25,9 @@ services:
       context: .
       target: dev
     command: python manage.py runserver 0.0.0.0:8000
+    environment:
+      ENVIRONMENT: 'local'
+      DEBUG: '1'
     ports:
       - "8000:8000"
 
