--- a/src/main/uwsgi.ini
+++ b/src/main/uwsgi.ini
@@ -49,3 +49,9 @@ offload-threads = 1
 
 # Terminate a worker process after a certain amount of time
 harakiri = 60
+
+# Enable post buffering to avoid errors caused by large request bodies
+post-buffering = 1
+
+# Timeout HTTP requests after 60 seconds
+http-timeout = 60
