--- a/src/main/uwsgi.ini
+++ b/src/main/uwsgi.ini
@@ -18,16 +18,16 @@ need-app = true
 no-default-app = 1
 
 # Enable lazy mode, which loads applications on the first request
-lazy-apps = true
+lazy-apps = false
 
 # Set the buffer size for requests
-buffer-size = 65535
+buffer-size = 131072
 
 # Log the X-Forwarded-For header for requests
 log-x-forwarded-for = true
 
 # The number of worker processes to spawn
-processes = 1
+processes = 4
 
 # The number of worker threads per process
 threads = 4
