--- a/src/main/uwsgi.ini
+++ b/src/main/uwsgi.ini
@@ -1,4 +1,5 @@
 [uwsgi]
+
 # If true, uwsgi will exit if it encounters any unrecognized options
 strict = true
 
@@ -52,3 +53,6 @@ harakiri = 120
 
 # Timeout HTTP requests after 60 seconds
 http-timeout = 120
+
+# Disable logging to the console
+disable-logging = true
