--- a/.gitignore
+++ b/.gitignore
@@ -1,96 +1,62 @@
-# project folders
-.git-ignore/
-src/static/
+# Created by .ignore support plugin (hsz.mobi)
+venv/
+.idea/
+.mypy*
 
-# project files
-*.sqlite3
-*/*.sqlite3
-*.sqlite3-journal
-*/*.sqlite3-journal
-
-#/docs
-#/settings
-.tmp/
-.env
-
-# Certificates
-*.pem
-*cert.key
-*cert.crt
-
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
+# Python ephemerals:
 *.pyc
+__pycache__
+*__pycache__*
+*__pycache__
+*.egg-info
+.eggs
+*.pytest*
+.pytest_cache
+*.pytest_cache*
 
-# Distribution / packaging
-.Python
-env/
-venv*/
-.venv*/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-cmd_in_venv.cmd
+# Python setuptools
+/build
+/dist
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# PyTest
+/.cache
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# PyDev/Eclipse
+.project
+.pydevproject
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-
-# Django stuff:
-*.log
-
-# Database
-*.db
-*.rdb
+# PyCharm/IntelliJ
+.idea
+*.iml
 
 # VS Code
 .vscode/
 *.code-workspace
 
-# Jupyter NB Checkpoints
-.ipynb_checkpoints/
+# Python virtual environement:
+/.venv
 
-# exclude data from source control by default
-#/data/
-/support/data_lake/
-data/
+# pyenv
+.python-version
 
-# Mac OS-specific storage files
-.DS_Store
+# Generated documentation:
+/docs/_build
+# Downloaded intersphinx inventory files:
+/docs/*.inv
+/docs/*.inv.txt
 
-# vim
-*.swp
-*.swo
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+junit-results.xml
 
-# webserver
-*web.config
-.app.env
-.app.env
+docker-compose.override.yml
+compose.override.yml
+.env
+secrets.env
+
+*/static/
