Replace mozilla oidc with amsterdam oidc

--- a/compose.yml
+++ b/compose.yml
@@ -6,6 +6,11 @@ x-app: &base-app
     OIDC_BASE_URL:
     OIDC_RP_CLIENT_ID:
     OIDC_RP_CLIENT_SECRET:
+    OIDC_RP_SCOPES:
+    OIDC_OP_USER_ENDPOINT:
+    OIDC_OP_ISSUER:
+    OIDC_VERIFY_AUDIENCE: true
+    OIDC_TRUSTED_AUDIENCES:
     OTEL_INSTRUMENTATION_HTTP_CAPTURE_HEADERS_SERVER_REQUEST: ".*"
     OTEL_INSTRUMENTATION_HTTP_CAPTURE_HEADERS_SERVER_RESPONSE: ".*"
     OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4317
