--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,18 @@
 #
 #    pip-compile --allow-unsafe --output-file=requirements.txt requirements.in
 #
+amsterdam-django-oidc==0.2.0
+    # via -r requirements.in
 asgiref==3.8.1
     # via django
-azure-core==1.32.0
+azure-core==1.34.0
     # via
     #   -r requirements.in
     #   azure-identity
     #   azure-keyvault-certificates
     #   azure-keyvault-keys
     #   azure-keyvault-secrets
-azure-identity==1.21.0
+azure-identity==1.23.0
     # via -r requirements.in
 azure-keyvault==4.2.0
     # via -r requirements.in
@@ -25,13 +27,13 @@ azure-keyvault-secrets==4.9.0
     # via
     #   -r requirements.in
     #   azure-keyvault
-certifi==2025.1.31
+certifi==2025.4.26
     # via requests
 cffi==1.17.1
     # via cryptography
-charset-normalizer==3.4.1
+charset-normalizer==3.4.2
     # via requests
-cryptography==44.0.2
+cryptography==45.0.3
     # via
     #   azure-identity
     #   azure-keyvault-keys
@@ -44,19 +46,19 @@ deprecated==1.2.18
     #   opentelemetry-api
     #   opentelemetry-exporter-otlp-proto-grpc
     #   opentelemetry-semantic-conventions
-django==5.1.7
+django==5.2.1
     # via
     #   -r requirements.in
     #   django-csp
     #   django-extensions
     #   mozilla-django-oidc
-django-csp==3.8
+django-csp==4.0
     # via -r requirements.in
-django-extensions==3.2.3
+django-extensions==4.1
     # via -r requirements.in
-googleapis-common-protos==1.69.2
+googleapis-common-protos==1.70.0
     # via opentelemetry-exporter-otlp-proto-grpc
-grpcio==1.71.0
+grpcio==1.72.1
     # via opentelemetry-exporter-otlp-proto-grpc
 idna==3.10
     # via requests
@@ -70,14 +72,14 @@ isodate==0.7.2
 josepy==2.0.0
     # via mozilla-django-oidc
 mozilla-django-oidc==4.0.1
-    # via -r requirements.in
-msal==1.32.0
+    # via amsterdam-django-oidc
+msal==1.32.3
     # via
     #   azure-identity
     #   msal-extensions
 msal-extensions==1.3.1
     # via azure-identity
-opentelemetry-api==1.31.1
+opentelemetry-api==1.33.1
     # via
     #   opentelemetry-exporter-otlp-proto-grpc
     #   opentelemetry-instrumentation
@@ -89,11 +91,11 @@ opentelemetry-api==1.31.1
     #   opentelemetry-instrumentation-wsgi
     #   opentelemetry-sdk
     #   opentelemetry-semantic-conventions
-opentelemetry-exporter-otlp-proto-common==1.31.1
+opentelemetry-exporter-otlp-proto-common==1.33.1
     # via opentelemetry-exporter-otlp-proto-grpc
-opentelemetry-exporter-otlp-proto-grpc==1.31.1
+opentelemetry-exporter-otlp-proto-grpc==1.33.1
     # via -r requirements.in
-opentelemetry-instrumentation==0.52b1
+opentelemetry-instrumentation==0.54b1
     # via
     #   opentelemetry-instrumentation-dbapi
     #   opentelemetry-instrumentation-django
@@ -101,25 +103,25 @@ opentelemetry-instrumentation==0.52b1
     #   opentelemetry-instrumentation-psycopg2
     #   opentelemetry-instrumentation-requests
     #   opentelemetry-instrumentation-wsgi
-opentelemetry-instrumentation-dbapi==0.52b1
+opentelemetry-instrumentation-dbapi==0.54b1
     # via opentelemetry-instrumentation-psycopg2
-opentelemetry-instrumentation-django==0.52b1
+opentelemetry-instrumentation-django==0.54b1
     # via -r requirements.in
-opentelemetry-instrumentation-logging==0.52b1
+opentelemetry-instrumentation-logging==0.54b1
     # via -r requirements.in
-opentelemetry-instrumentation-psycopg2==0.52b1
+opentelemetry-instrumentation-psycopg2==0.54b1
     # via -r requirements.in
-opentelemetry-instrumentation-requests==0.52b1
+opentelemetry-instrumentation-requests==0.54b1
     # via -r requirements.in
-opentelemetry-instrumentation-wsgi==0.52b1
+opentelemetry-instrumentation-wsgi==0.54b1
     # via opentelemetry-instrumentation-django
-opentelemetry-proto==1.31.1
+opentelemetry-proto==1.33.1
     # via
     #   opentelemetry-exporter-otlp-proto-common
     #   opentelemetry-exporter-otlp-proto-grpc
-opentelemetry-sdk==1.31.1
+opentelemetry-sdk==1.33.1
     # via opentelemetry-exporter-otlp-proto-grpc
-opentelemetry-semantic-conventions==0.52b1
+opentelemetry-semantic-conventions==0.54b1
     # via
     #   opentelemetry-instrumentation
     #   opentelemetry-instrumentation-dbapi
@@ -127,14 +129,16 @@ opentelemetry-semantic-conventions==0.52b1
     #   opentelemetry-instrumentation-requests
     #   opentelemetry-instrumentation-wsgi
     #   opentelemetry-sdk
-opentelemetry-util-http==0.52b1
+opentelemetry-util-http==0.54b1
     # via
     #   opentelemetry-instrumentation-django
     #   opentelemetry-instrumentation-requests
     #   opentelemetry-instrumentation-wsgi
-packaging==24.2
-    # via opentelemetry-instrumentation
-protobuf==5.29.4
+packaging==25.0
+    # via
+    #   django-csp
+    #   opentelemetry-instrumentation
+protobuf==5.29.5
     # via
     #   googleapis-common-protos
     #   opentelemetry-proto
@@ -157,7 +161,7 @@ six==1.17.0
     # via azure-core
 sqlparse==0.5.3
     # via django
-typing-extensions==4.13.0
+typing-extensions==4.14.0
     # via
     #   azure-core
     #   azure-identity
@@ -165,9 +169,9 @@ typing-extensions==4.13.0
     #   azure-keyvault-keys
     #   azure-keyvault-secrets
     #   opentelemetry-sdk
-urllib3==2.3.0
+urllib3==2.4.0
     # via requests
-uwsgi==2.0.28
+uwsgi==2.0.30
     # via -r requirements.in
 wfastcgi==3.0.0
     # via -r requirements.in
@@ -176,5 +180,5 @@ wrapt==1.17.2
     #   deprecated
     #   opentelemetry-instrumentation
     #   opentelemetry-instrumentation-dbapi
-zipp==3.21.0
+zipp==3.22.0
     # via importlib-metadata
