--- a/requirements_dev.in
+++ b/requirements_dev.in
@@ -2,6 +2,7 @@ pytest<8  # 8 breaks pytest-django with error on /root/__init__.py
 pytest-cov
 pytest-django
 pytest-mock
+model-bakery
 parameterized
 pyOpenSSL
 Werkzeug
