--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
+[project]
+name = "fb-locatielijst"
+readme = "README.md"
+requires-python = ">=3.13, <3.14"
+dynamic = ["version"]
+
 [tool.isort]
 profile = "black"
 [tool.autoflake]
