refactor: switch from isort, autoflake and black to ruff

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -24,11 +24,9 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements_linting.txt
 
-      - name: Run autoflake check
-        run: autoflake ./src/ --check --recursive --quiet
 
-      - name: Run isort check
-        run: isort --diff --check ./src/
+      - name: Run ruff check
+        run: ruff check .
 
-      - name: Run black check
-        run: black --diff --check ./src/
+      - name: Run ruff format check
+        run: ruff format --diff .
