ci: added `django` all lowercase just to be sure

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,6 +28,9 @@ updates:
       - dependency-name: "Django"
         versions:
           - ">= 6"
+      - dependency-name: "django"
+        versions:
+          - ">= 6"
 
   - package-ecosystem: "github-actions"
     directory: "/"
